--- a/public_html/styles/concept.css
+++ b/public_html/styles/concept.css
@@ -86,7 +86,7 @@ a:hover {
 .concept #container #mainContent .slideshow #thumbs {
 	height: 95px;
 	padding: 20px 0 0 0;
-	overflow-x: hidden;
+	overflow-x: scroll;
 	white-space: nowrap;
 	margin-bottom: 10px;
 	width: 500px;
